# AICallAssistant

./: .gitignore  .gitmodules  Blueprint_ASR_CPP.txt  GPTQuestionsResponse.txt  Proceed.txt  Proceed_ASR_CPP_MIGRATION.txt  Proceed_LiveStreaming.txt  Proceed_ReportingAlignment.txt  README.md  asr.py  build_asr.bat  build_asr.ps1  call_summary_generator.py  call_transcript_recorder.py  context.txt  evaluation_report_builder.py  exception_logger.py  improvements.txt  llm.py  main.py  matcher.py  persona.txt  qa_script.json  question_detector.py  requirements.txt  response_manager.py  run_all.ps1  run_backend.bat  run_backend.sh  scope.txt  stream_asr.py  test_asr.py  ui.py  ui_flet.py  ui_stream.py
CallAssistantUI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
CallAssistantUI/Services/: RestClient.cs  WebSocketManager.cs
CallAssistantUI/ViewModels/: AsyncRelayCommand.cs  MainViewModel.cs  QuestionViewModel.cs  StatusViewModel.cs  SuggestionViewModel.cs  TranscriptViewModel.cs  ViewModelBase.cs
backend_server/: SETUP.md  asr_engine.py  call_manager.py  heartbeat_manager.py  main_server.py  question_manager.py  requirements.txt  response_manager.py  transcript_stream.py
cpp_asr/: BUILDING_ASR.md  CALL_ASSISTANT_UI_SPEC.txt  CMakeLists.txt  CMakePresets.json  asr_engine.cpp  asr_engine.h  audio_ringbuffer.cpp  audio_ringbuffer.h  c_api_bindings.cpp  c_api_bindings.h  exception_logger.cpp  exception_logger.h  heartbeat_logger.cpp  heartbeat_logger.h  snapshot_worker.cpp  snapshot_worker.h  test_asr.cpp  test_wav_push.py  vad_detector.cpp  vad_detector.h  whisper_wrapper.cpp  whisper_wrapper.h
cpp_asr/specs/: cpp_asr_full_spec.txt  deduplication_and_overlap.txt  python_integration_plan.txt  snapshot_logic.txt  vad_integration.txt  whispercpp_impl.txt
logs/call_20251113_190434/: evaluation_report.json
logs/call_20251113_191017/: evaluation_report.json  summary.html  summary.json  transcript.json
logs/call_20251113_221353/: alignment.json  detected_questions.json  evaluation_report.json  summary.html  summary.json  transcript.json
logs/call_20251113_224306/: alignment.json  detected_questions.json  evaluation_report.json  summary.html  summary.json  transcript.json
logs/heartbeat/: call_20251113_190121.jsonl  call_20251113_191017.jsonl  call_20251113_191024.jsonl  call_20251113_221353.jsonl  call_20251113_224306.jsonl  call_20251114_112224.jsonl  call_20251114_112701.jsonl  call_20251114_114201.jsonl
scripts/: runall.ps1  start_backend.bat  start_backend.ps1  verify_backend.py  verify_cpp_module.py
